vndb-api-derive/tests/ui/skip_fail.stderr
error[E0599]: no variant or associated item named `Skipped` found for enum `StructFields` in the current scope
  --> tests/ui/skip_fail.rs:25:27
   |
3  | #[derive(VndbFieldsEnum)]
   |          -------------- variant or associated item `Skipped` not found for this enum
...
25 |     let _ = StructFields::Skipped;
   |                           ^^^^^^^ variant or associated item not found in `StructFields`

error[E0599]: no variant or associated item named `Nested` found for enum `NestedFields` in the current scope
  --> tests/ui/skip_fail.rs:28:48
   |
11 | #[derive(VndbFieldsEnum)]
   |          -------------- variant or associated item `Nested` not found for this enum
...
28 |     let _ = StructFields::Nested(NestedFields::Nested(NestedNestedFields::Test));
   |                                                ^^^^^^ variant or associated item not found in `NestedFields`
